--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "node-windows": "^1.0.0-beta.6",
     "sequelize": "^6.3.5"
   }
 }
